added content block and snippets

--- a/base.html
+++ b/base.html
@@ -6,7 +6,7 @@
     <title>header title</title>
   </head>
   <body>
-    <main><h1>this is the body</h1></main>
+    {% block content %} {%endblock content%}
     <footer><h3>this is footer</h3></footer>
   </body>
 </html>
