--- a/base.html
+++ b/base.html
@@ -6,6 +6,7 @@
     <title>header title</title>
   </head>
   <body>
+    <header><h1>This is the header</h1></header>
     {% block content %} {%endblock content%}
     <footer><h3>this is footer</h3></footer>
   </body>
