--- a/base.html
+++ b/base.html
@@ -6,7 +6,21 @@
     <title>header title</title>
   </head>
   <body>
-    <header><h1>This is the header</h1></header>
+    <header>
+      {%if request.user.is_authenticated%}
+      <p>
+        <a href="{%url 'home'%}">Home</a> |
+        <a href="{% url 'logout'%}">Logout</a>
+      </p>
+      <p>Hello, {{request.user.username}}</p>
+      {%else%}
+      <p>
+        <a href="{%url 'home'%}">Home</a>
+        <a href="{%url 'register' %}">Register</a> |
+        <a href="{% url 'login' %}">Login</a>
+      </p>
+      {%endif%}
+    </header>
     {% block content %} {%endblock content%}
     <footer><h3>this is footer</h3></footer>
   </body>
