--- a/base.html
+++ b/base.html
@@ -10,6 +10,7 @@
       {%if request.user.is_authenticated%}
       <p>
         <a href="{%url 'home'%}">Home</a> |
+        <a href="{%url 'account'%}">My Account</a> |
         <a href="{% url 'logout'%}">Logout</a>
       </p>
       <p>Hello, {{request.user.username}}</p>
